	PR middle-end/18045 	* expmed.c (expand_smod_pow2): Handle modes whose size 	is greater than that of HOST_WIDE_INT.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@89253 138bc75d-0d04-0410-961f-82ee72b054a4